--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,11 +15,11 @@ jobs:
       - name: Build an image from Dockerfile
         id: image_build
         run: |
-          docker build -t nginx-vulners:latest --iidfile=image_id.out .
+          docker build -t debian:latest --iidfile=image_id.out .
           echo ::set-output name=image_id::$(cat image_id.out)
       - name: Run Uptycs Vulnerability Scanner Expected to Fail
         uses: Uptycs/actionsvulners@main
         with:
-          uptycs-secret: ${{ secrets.UPTYCS_CI_SECRET_VULNERS }}
-          hostname: ${{ secrets.UPTYCS_CI_HOST_NAME_VULNERS }}
+          uptycs-secret: ${{ secrets.UPTYCS_CI_SECRET}}
+          hostname: ${{ secrets.UPTYCS_CI_HOST_NAME}}
           image-id: ${{ steps.image_build.outputs.name }}
