--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
           docker build -t debian:latest --iidfile=image_id.out .
           echo ::set-output name=image_id::$(cat image_id.out)
       - name: Run Uptycs Vulnerability Scanner Expected to Fail
-        uses: Uptycs/actionsvulners@main
+        uses: sahiti-uptycs/test1_action@main
         with:
           uptycs-secret: ${{ secrets.UPTYCS_CI_SECRET}}
           hostname: ${{ secrets.UPTYCS_CI_HOST_NAME}}
